ubuntu-dev-tools (0.131) UNRELEASED; urgency=low

  [ Stefano Rivera ]
  * doc/requestsync.1: Correct default value for REQUESTSYNC_SMTP_SERVER
    (LP: #844992)
  * import-bug-from-debian: Bugs are filed against source packages in Ubuntu.
    (LP: #844734)
  * Debian source publication records are all Published now, not pending
    (LP: #845487)
  * requestsync: Add nice error messages to gpg-signing code, rather than
    simple assertions (LP: #537288)
  * submittodebian:
    - Don't parse the entire changelog, to avoid bumping into past illegal
      version numbers (LP: #727314)
    - Iterate over changelog blocks rather than using Changelog's private
      _blocks list.
  LP: #806633:
    - ubuntutools.update_maintainer: Don't use strict changelog parsing
    - sponsor-patch: Perform strict validation on the first changelog entry.
  * setup-packaging-environment:
    - Software Sources isn't on the Administration menu, post Gnome 2
      (LP: #841975)
    - Use apt-get rather than aptitude.
  * Removed get-build-deps, mk-build-deps -ir is equivalent (LP: #158108)
  * ubuntutools.archive:
    - Add quiet option to silence downloading.
    - Use wget-style progress bar (fixed width) (LP: #845787)

  [ Colin Watson ]
  * syncpackage: Fix typo.

 -- Stefano Rivera <stefanor@debian.org>  Thu, 08 Sep 2011 23:13:05 +0200

ubuntu-dev-tools (0.130) unstable; urgency=low

  * pull-lp-source: Support source packages with a bad version string
    (LP: #844682).
  * backportpackage:
    - Search for newer versions in -{updates,security} on Ubuntu (LP: #823833).
    - Use Ubuntu and Debian as fall back check in codename_to_distribution to
      allow backporting to Ubuntu from a Debian system (LP: #823832).

 -- Benjamin Drung <bdrung@debian.org>  Thu, 08 Sep 2011 22:04:11 +0200

ubuntu-dev-tools (0.129) unstable; urgency=low

  [ Colin Watson ]
  * syncpackage: Convert to new LP API, with --no-lp available for the old
    style of operation.