@@ -15,7 +15,7 @@ Build-Depends: dctrl-tools,
                pylint,
                python-all (>= 2.6.5-13~),
                python-apt (>= 0.7.93~),
-               python-debian (>= 0.1.15),
+               python-debian (>= 0.1.20~),
                python-gnupginterface,
                python-launchpadlib (>= 1.5.7),
                python-mox,
@@ -36,7 +36,7 @@ Depends: binutils,
          dpkg-dev,
          lsb-release,
          python-apt (>= 0.7.93~),
-         python-debian (>= 0.1.15),
+         python-debian (>= 0.1.20~),
          python-launchpadlib (>= 1.5.7),
          python-lazr.restfulclient,
          sudo,
